Remove unnecessary width on recentActivityWidget and add min height to avoid some content shift during first load

--- a/website/static/css/recent-activity-widget.css
+++ b/website/static/css/recent-activity-widget.css
@@ -1,8 +1,7 @@
 
 
 #recentActivityWidget {
-    width: 90%;
-    margin-left: 5%;
+    min-height: 660px;
 }
 
 #recentActivitySlider .progress-bar {
